--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^1.4.0",
     "concurrently": "^8.2.0",
     "craco": "^0.0.3",
+    "crypto-js": "^4.1.1",
     "json-server": "^0.17.3",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
