--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 REACT_APP_SERVER_JSON=http://localhost:4000/
 REACT_APP_JWT_KEY=thuhuong
+REACT_APP_FIRE_STORAGE_API_KEY=AIzaSyB-pTZHfB_4gjckRcHpIJOkIFhMGsVy2mU
+REACT_APP_FIRE_STORAGE_AUTH_DOMAIN=module-2-5d4b9.firebaseapp.com
+REACT_APP_FIRE_STORAGE_PROJECT_ID=module-2-5d4b9
+REACT_APP_FIRE_STORAGE_STORAGE_BUCKET=module-2-5d4b9.appspot.com
+REACT_APP_FIRE_STORAGE_MESSAGING_SENDER_ID=122155450367
+REACT_APP_FIRE_STORAGE_APP_ID=1:122155450367:web:065d3150008a5106e571ca
+REACT_APP_FIRE_STORAGE_MEASUREMENT_ID=G-8WL4E5QWX1
